micromobility_car_navigation/local/Project/dev_ws/log/build_2021-03-22_13-36-18/navigation/stderr.log
  File "/home/user/Projects/dev_ws/install/navigation/lib/python3.8/site-packages/navigation/heading_calculator.py", line 14
    self.subscription = self.create_subscription(, 'coorpair', self.calculate_heading_callback, 10)
                                                 ^
SyntaxError: invalid syntax

